--- a/index.html
+++ b/index.html
@@ -20,8 +20,56 @@
 
     <div class="introduction">
       <div class="introduction-text">
-        
+        <div class="main-title">This website is awesome</div>
+        <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <button class="main-sign-up">Sign up</button>
+      </div>
+      <div class="introduction-image">
+        <div class="placeholder-text">this is a placeholder for an image</div>
       </div>
     </div>
+
+    <div class="random-info">
+      <div class="info-title">Some random information.</div>
+
+      <div class="info-images">
+        <div class="info-box">
+          <div class="illustration"></div>
+          <div class="info-subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info-box">
+          <div class="illustration"></div>
+          <div class="info-subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info-box">
+          <div class="illustration"></div>
+          <div class="info-subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info-box">
+          <div class="illustration"></div>
+          <div class="info-subtext">this is some subtext under an illustration or image</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial-section">
+      <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+      <div class="author">-Thor, God of Thunder</div>
+    </div>
+
+    <div class="call-to-action">
+      <div class="cta-box">
+        <div class="cta-text">
+          <div class="cta-title">Call to action! It's time!</div>
+          <div class="cta-subtext">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        
+        <div class="cta-button">
+          <button class="cta-sign-up">Sign up</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
 </html>
