Styled sections and improved flexbox

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Landing Page</title>
   </head>
-
+    <link rel="stylesheet" href="style.css">
   <body>
 
     <div class="header">
@@ -63,7 +63,7 @@
           <div class="cta-title">Call to action! It's time!</div>
           <div class="cta-subtext">Sign up for our product by clicking that button right over there!</div>
         </div>
-        
+
         <div class="cta-button">
           <button class="cta-sign-up">Sign up</button>
         </div>
@@ -71,5 +71,6 @@
     </div>
 
     <div class="footer">Copyright © The Odin Project 2021</div>
+
   </body>
 </html>
