Complete CSS for random information section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="main-sign-up">Sign up</button>
       </div>
       <div class="introduction-image">
-        <div class="placeholder-text">this is a placeholder for an image</div>
+        <span class="placeholder-text">this is a placeholder for an image</span>
       </div>
     </div>
 
