Add background image and style header area

--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
   <body>
 
     <div class="header">
-      <div class="header-logo">Header Logo</div>
+      <img class="header-logo" src="img/100t-logo.png" alt="100Thieves logo"></img>
       <div class="header-links">
         <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
+          <li><a href="#">search</a></li>
+          <li><a href="#">login</a></li>
+          <li><a href="#">bag (0)</a></li>
         </ul>
       </div>
     </div>
 
     <div class="introduction">
       <div class="introduction-text">
-        <div class="main-title">This website is awesome</div>
-        <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button class="main-sign-up">Sign up</button>
-      </div>
-      <div class="introduction-image">
-        <span class="placeholder-text">this is a placeholder for an image</span>
+        <div class="main-title">BECOME A CHAMPION</div>
+        <div class="main-subtext">Introducing our special edition 2022 Championship Jerseys. Cream colorway with custom naming options.</div>
+        <button class="main-sign-up">Shop Now</button>
       </div>
     </div>
 
