Edit page content and fix up CSS styling

--- a/index.html
+++ b/index.html
@@ -27,47 +27,47 @@
     </div>
 
     <div class="random-info">
-      <div class="info-title">Some random information.</div>
+      <div class="info-title">SHOP OUR NEWEST COLLECTIONS</div>
 
       <div class="info-images">
         <div class="info-box">
-          <div class="illustration"></div>
-          <div class="info-subtext">this is some subtext under an illustration or image</div>
+          <img class="illustration" src="img/creator-colors.webp"></img>
+          <div class="info-subtext">CREATOR COLORS</div>
         </div>
         <div class="info-box">
-          <div class="illustration"></div>
-          <div class="info-subtext">this is some subtext under an illustration or image</div>
+          <img class="illustration" src="img/foundations22.webp"></img>
+          <div class="info-subtext">FOUNDATIONS '22</div>
         </div>
         <div class="info-box">
-          <div class="illustration"></div>
-          <div class="info-subtext">this is some subtext under an illustration or image</div>
+          <img class="illustration" src="img/countryclub.webp"></img>
+          <div class="info-subtext">COUNTRY CLUB</div>
         </div>
         <div class="info-box">
-          <div class="illustration"></div>
-          <div class="info-subtext">this is some subtext under an illustration or image</div>
+          <img class="illustration" src="img/lathieves.webp"></img>
+          <div class="info-subtext">LA THIEVES</div>
         </div>
       </div>
     </div>
 
     <div class="testimonial-section">
-      <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-      <div class="author">-Thor, God of Thunder</div>
+      <div class="quote">"Some might think this is corny but I truly believe it down in my very core that you have to take what you want in life. If you want to do better by your family and have a life that you can be proud of, it has everything to do with what your goals are."</div>
+      <div class="author">-Matthew "Nadeshot" Haag, 100T CEO</div>
     </div>
 
     <div class="call-to-action">
       <div class="cta-box">
         <div class="cta-text">
-          <div class="cta-title">Call to action! It's time!</div>
-          <div class="cta-subtext">Sign up for our product by clicking that button right over there!</div>
+          <div class="cta-title">JOIN THE 100T FAMILY.</div>
+          <div class="cta-subtext">Sign up for updates and news on all things 100 Thieves.</div>
         </div>
 
         <div class="cta-button">
-          <button class="cta-sign-up">Sign up</button>
+          <button class="cta-sign-up">SUBSCRIBE</button>
         </div>
       </div>
     </div>
 
-    <div class="footer">Copyright © The Odin Project 2021</div>
+    <div class="footer">#100WIN</div>
 
   </body>
 </html>
