Edit background to improve scaling

--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
     <link rel="stylesheet" href="style.css">
   <body>
 
-    <div class="header">
-      <img class="header-logo" src="img/100t-logo.png" alt="100Thieves logo"></img>
-      <div class="header-links">
-        <ul>
-          <li><a href="#">search</a></li>
-          <li><a href="#">login</a></li>
-          <li><a href="#">bag (0)</a></li>
-        </ul>
-      </div>
-    </div>
+    <div class="bg-img">
 
-    <div class="introduction">
-      <div class="introduction-text">
-        <div class="main-title">BECOME A CHAMPION</div>
-        <div class="main-subtext">Introducing our special edition 2022 Championship Jerseys. Cream colorway with custom naming options.</div>
-        <button class="main-sign-up">Shop Now</button>
+      <div class="header">
+        <img class="header-logo" src="img/100t-logo.png" alt="100Thieves logo"></img>
+        <div class="header-links">
+          <ul>
+            <li><a href="#">search</a></li>
+            <li><a href="#">login</a></li>
+            <li><a href="#">bag (0)</a></li>
+          </ul>
+        </div>
       </div>
+  
+      <div class="introduction">
+        <div class="introduction-text">
+          <div class="main-title">BECOME A CHAMPION</div>
+          <div class="main-subtext">Introducing our special edition 2022 Championship Jerseys. Cream colorway with custom naming options.</div>
+          <button class="main-sign-up">Shop Now</button>
+        </div>
+      </div>
+      
     </div>
 
     <div class="random-info">
@@ -47,6 +51,7 @@
           <div class="info-subtext">LA THIEVES</div>
         </div>
       </div>
+
     </div>
 
     <div class="testimonial-section">
